Fix new card sizing on mobile

--- a/assets/common.css
+++ b/assets/common.css
@@ -470,16 +470,9 @@ th {
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .card {
+  #section-about .card {
     flex-direction: column;
     align-items: center;
-  }
-
-  .card-preview-placeholder,
-  .card > .card-preview img {
-    height: auto;
-    width: auto;
-    max-width: 100%;
   }
 
   .preview-icon-box {
